--- a/assets/css/extended/user.css
+++ b/assets/css/extended/user.css
@@ -7,4 +7,5 @@ h1, h2 { font-stretch: semi-expanded; }
 .first-entry { min-height: auto; }
 .post-entry:active { transform: none; }
 .post-entry audio { margin: calc(var(--gap) / 2) 0; width: 100%; outline: none; }
+.post-entry .entry-content { display: block; -webkit-line-clamp: none; }
 .post-entry .entry-content p { margin-top: calc(var(--gap) / 2); display: block; overflow: auto; }
